<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_color">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/icons8_facebook" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/instagram"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/icons8_instagram" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/yahoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/icons8_yahoo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="443dp"
        android:layout_height="479dp"
        android:layout_marginBottom="408dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo1" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/usern"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="218dp"
        android:layout_height="52dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="123dp"
        android:layout_height="28dp"
        android:layout_marginTop="13dp"
        android:text="@string/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="68dp"
        android:layout_height="26dp"
        android:layout_marginTop="236dp"
        android:text="Sign in"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="31dp"
        android:layout_marginBottom="212dp"
        android:text="@string/login_or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="@string/login_or" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="182dp"
        android:layout_height="25dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/goto_register" />
</androidx.constraintlayout.widget.ConstraintLayout>